--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
-<!DOCTYPE html>
-<html ng-app="NarrowItDownApp" lang="en">
+<!doctype html>
+<html lang="en" ng-app="NarrowItDownApp">
   <head>
     <title>Narrow Down Your Menu Choice</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles/bootstrap.min.css" />
-    <link rel="stylesheet" href="styles/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="js/angular.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>    
   </head>
-  <body>
-    <div class="container" ng-controller="NarrowItDownController as menu">
-      <h1>Narrow Down Your Chinese Menu Choice</h1>
+<body >
+   <div class="container" ng-controller="NarrowItDownController as menu">
+    <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-      <div class="form-group">
-        <input
-          type="text"
-          placeholder="search term"
-          class="form-control"
-          ng-model="menu.input"
-        />
-      </div>
-      <div class="form-group narrow-button">
-        <button class="btn btn-primary" ng-click="menu.filter()">
-          Narrow It Down For Me!
-        </button>
-      </div>
-      <div style="clear: both"></div>
-      <!-- found-items should be implemented as a component -->
-      <found-items items="menu.found" on-remove="menu.remove(index)">
-        <div ng-if="menu.showNothing">Nothing found!</div>
-      </found-items>
+    <div class="form-group">
+      <input type="text" placeholder="search term" class="form-control" ng-model="menu.input">
     </div>
-  </body>
+    <div class="form-group narrow-button">
+      <button class="btn btn-primary" ng-click="menu.filter()">Narrow It Down For Me!</button>
+    </div>
+    <div style="clear:both"></div>
+    
+    <!-- found-items should be implemented as a component -->
+    <found-items items="menu.found"  on-remove="menu.remove(index)">
+       <div ng-if="menu.showNothing">Nothing found!</div>
+    </found-items>
+  </div>
+
+</body>
 </html>
